Fix spacing

--- a/seminars/templates/style.css
+++ b/seminars/templates/style.css
@@ -579,7 +579,7 @@ div.col6 {
     padding-right: 4px;
 }
 #filter-container td.fknowl {
-    padding-right: 3em;
+    padding-right: 2.2em;
 }
 
 #filter-controls {
